--- a/js-me/todo.html
+++ b/js-me/todo.html
@@ -4,7 +4,8 @@
 	<title>To-do list</title>
 
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 
 	<body>
@@ -16,18 +17,18 @@
 				<div class="page-header">
 					<h1> todotodotodotodo</h1>
 				</div>
-				<form class="col">
+				<form class="col" action="." method="GET">
 					<div class="form-group">
 						<input type="text" class="form-control" id="item" placeholder="Enter a task to do" name="task">
 					</div>
-					<!-- <input type="submit" class="btn btn-default" value="Add">  -->
-					<input type="button" class="btn btn-default" onclick="addItem()" value="Add"> 
+					<input type="submit" class="btn btn-default" value="Add"> 
+					<!-- <input type="button" class="btn btn-default" onclick="addItem()" value="Add">  -->
 
 					<input type="button" class="btn btn-default" onclick="removeItem()" value="Remove Last">
 				</form>
 
 				<h3>TO DO:</h3>
-				<ul id="todo"></ul>
+				<ul id="todolist"></ul>
 			</div>
 			<div class="col-xs-6 col-md-3"></div>
 
@@ -54,7 +55,7 @@
 			}
 
 			function updateItemsList() {
-				var list = document.getElementById("todo");
+				var list = document.getElementById("todolist");
 				var html = ""
 				for ( i in items ) {
 					html += "<li>" + items[i] + "</li>";
