--- a/js-me/todo.html
+++ b/js-me/todo.html
@@ -15,9 +15,9 @@
 			<div class="col-xs-6 col-md-3"></div>
 			<div class="col-xs-6 col-md-6">
 				<div class="page-header">
-					<h1> todotodotodotodo</h1>
+					<h1> todolist</h1>
 				</div>
-				<form class="col" action="." method="GET">
+				<form class="col" action="." method="POST">
 					<div class="form-group">
 						<input type="text" class="form-control" id="item" placeholder="Enter a task to do" name="task">
 					</div>
